<resources>
    <string name="app_name">Cafe</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="user_name_hint">Имя пользователя</string>
    <string name="user_password_hint">Пароль</string>
    <string name="sign_in_button">Войти</string>
    <string name="content_description_dunkin_donuts">бренд: Dunkin\' Donuts</string>
    <string name="greetings">Здравствуйте, %s! Что желаете?</string>
    <string name="radio_button_tea">Чай</string>
    <string name="radio_button_coffee">Кофе</string>
    <string name="additives">Что добавить в ваш %s?</string>
    <string name="sugar">Сахар</string>
    <string name="milk">Молоко</string>
    <string name="lemon">Лимон</string>
    <string name="chose_type_of_drink">Выберите тип напитка</string>
    <string name="make_order">Сделать заказ</string>
    <string name="name">Имя:</string>
    <string name="drink">Напиток:</string>
    <string name="drink_type">Тип напитка:</string>
    <string name="additives_label">Добавки:</string>
    <string name="error_empty_fields">Пожалуйста, заполните все поля!</string>
    <string name="empty_additives">Без добавок</string>

    <array name="types_of_tea">
        <item>Зеленый</item>
        <item>Черный</item>
    </array>

    <array name="types_of_coffee">
        <item>Латте</item>
        <item>Капучино</item>
        <item>Раф</item>
        <item>Эспрессо</item>
    </array>
</resources>